--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 hs_err_pid*
 /Sem01/SumaApp/nbproject/private/
 /Sem01/SumaApp/build/
+/Sem02/AprendiendoJava/nbproject/private/
+/Sem02/AprendiendoJava/build/
