--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ hs_err_pid*
 /Sem01/SumaApp/build/
 /Sem02/AprendiendoJava/nbproject/private/
 /Sem02/AprendiendoJava/build/
+/Sem02/PagoApp/nbproject/private/
+/Sem02/PagoApp/build/
