--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ hs_err_pid*
 /Sem02/AprendiendoJava/build/
 /Sem02/PagoApp/nbproject/private/
 /Sem02/PagoApp/build/
+/Sem03/AprendiendoJava/nbproject/private/
+/Sem03/AprendiendoJava/build/
+/Sem03/Ventas/nbproject/private/
+/Sem03/Ventas/build/
