--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ hs_err_pid*
 /Sem03/AprendiendoJava/build/
 /Sem03/Ventas/nbproject/private/
 /Sem03/Ventas/build/
+/Sem04/SolPract01/nbproject/private/
+/Sem04/SolPract01/build/
