--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ hs_err_pid*
 /Sem03/Ventas/build/
 /Sem04/SolPract01/nbproject/private/
 /Sem04/SolPract01/build/
+/Sem05/AprendiendoHerencia/nbproject/private/
+/Sem05/AprendiendoHerencia/build/
