--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ hs_err_pid*
 /Sem04/SolPract01/build/
 /Sem05/AprendiendoHerencia/nbproject/private/
 /Sem05/AprendiendoHerencia/build/
+/Sem05/CONCYTEC/nbproject/private/
+/Sem05/CONCYTEC/dist/
+/Sem05/CONCYTEC/build/
