--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ hs_err_pid*
 /Sem05/CONCYTEC/nbproject/private/
 /Sem05/CONCYTEC/dist/
 /Sem05/CONCYTEC/build/
+/Sem06/SolPract02/nbproject/private/
+/Sem06/SolPract02/build/
