--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ hs_err_pid*
 /Sem05/CONCYTEC/build/
 /Sem06/SolPract02/nbproject/private/
 /Sem06/SolPract02/build/
+/Sem06/AprendiendoHerencia/nbproject/private/
+/Sem06/AprendiendoHerencia/build/
+/Sem06/VentaApp/nbproject/private/
+/Sem06/VentaApp/build/
