--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ hs_err_pid*
 /Sem06/AprendiendoHerencia/build/
 /Sem06/VentaApp/nbproject/private/
 /Sem06/VentaApp/build/
+/Sem07/CreditoApp/nbproject/private/
+/Sem07/CreditoApp/build/
