--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ hs_err_pid*
 /Sem06/VentaApp/build/
 /Sem07/CreditoApp/nbproject/private/
 /Sem07/CreditoApp/build/
+/Sem09/AprendiendoJava/nbproject/private/
+/Sem09/AprendiendoJava/build/
+/Sem09/EduTecLib/build/
+/Sem09/CasosApp/nbproject/private/
+/Sem09/EduTecLib/nbproject/private/
+/Sem09/EduTecLib/dist/
+/Sem09/CasosApp/build/
