--- a/Sem09/EduTecLib/nbproject/project.properties
+++ b/Sem09/EduTecLib/nbproject/project.properties
@@ -20,23 +20,23 @@ debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Log4JPropiedades.jar
+dist.jar=${dist.dir}/EduTecLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.log4j-1.2.16.jar=C:\\apis java\\log\\log4j-1.2.16.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.log4j-1.2.16.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -53,16 +53,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ProyectoLog.Principal
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
