--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ hs_err_pid*
 /Sem09/EduTecLib/nbproject/private/
 /Sem09/EduTecLib/dist/
 /Sem09/CasosApp/build/
+/Sem10/PagoTrabajador/nbproject/private/
+/Sem10/PagoTrabajador/build/
+/Sem10/NaveAndo/NavegandoAndoApp/build/
