--- a/Sem10/NaveAndo/NavegandoAndoApp/nbproject/project.properties
+++ b/Sem10/NaveAndo/NavegandoAndoApp/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/NaveAndoApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.poi-3.15.jar=lib\\poi-3.15.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.poi-3.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
