--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ hs_err_pid*
 /Sem10/PagoTrabajador/nbproject/private/
 /Sem10/PagoTrabajador/build/
 /Sem10/NaveAndo/NavegandoAndoApp/build/
+/Sem11/PagoTrabajador/build/
+/Sem11/PagoTrabajador/nbproject/private/
