--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ hs_err_pid*
 /Sem10/NaveAndo/NavegandoAndoApp/build/
 /Sem11/PagoTrabajador/build/
 /Sem11/PagoTrabajador/nbproject/private/
+/Sem12/Pract02/nbproject/private/
+/Sem12/Pract02/build/
