--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ hs_err_pid*
 /Sem11/PagoTrabajador/nbproject/private/
 /Sem12/Pract02/nbproject/private/
 /Sem12/Pract02/build/
+/Sem13/NotasUCH/nbproject/private/
+/Sem13/NotasUCH/build/
